--- a/react-project/src/components/Home/index.scss
+++ b/react-project/src/components/Home/index.scss
@@ -16,18 +16,18 @@
       font-family: 'Coolvetica';
       font-weight: 400;
   
-      &:before {
+      &::before {
         content: '<h1>';
         font-family: 'La Belle Aurore', cursive;
         color: #ffd700;
         font-size: 18px;
         position: absolute;
         margin-top: -40px;
-        left: -15px;
+        left: -15px;//15px
         opacity: 0.6;
       }
   
-      &:after {
+      &::after {
         content: '<h1/>';
         font-family: 'La Belle Aurore', cursive;
         color: #ffd700;
@@ -70,7 +70,7 @@
       border: 1px solid #ffd700;
       margin-top: 25px;
       float: left;
-      animation: fadeInAnimation 1s 1.8s backwards;
+      animation: fadeInAnimation 1s 1.8s backwards;//fadeIn
       white-space: nowrap;
   
       &:hover {
@@ -82,45 +82,45 @@
   
   
   
-  @media screen and (max-width: 1200px) {
-    .tags,
-    .home-page h1:before,
-    .home-page h1:after {
-      display: none;
-    }
+  // @media screen and (max-width: 1200px) {
+  //   .tags,
+  //   .home-page h1:before,
+  //   .home-page h1:after {
+  //     display: none;
+  //   }
   
-    .home-page .text-zone {
-      position: initial;
-      width: 100%;
-      transform: none;
-      padding: 10px;
-      box-sizing: border-box;
-    }
+  //   .home-page .text-zone {
+  //     position: initial;
+  //     width: 100%;
+  //     transform: none;
+  //     padding: 10px;
+  //     box-sizing: border-box;
+  //   }
   
-    .home-page .flat-button {
-      float: none;
-      display: block;
-      margin: 20px auto 0 auto;
-      width: 124px;
-    }
+  //   .home-page .flat-button {
+  //     float: none;
+  //     display: block;
+  //     margin: 20px auto 0 auto;
+  //     width: 124px;
+  //   }
   
-    .logo-container {
-      position: relative;
-      width: 100px;
-      height: auto;
-      top: 50px;
-      right: 0;
-      box-sizing: border-box;
-      margin: auto;
-      left: 0;
-    }
+  //   .logo-container {
+  //     position: relative;
+  //     width: 100px;
+  //     height: auto;
+  //     top: 50px;
+  //     right: 0;
+  //     box-sizing: border-box;
+  //     margin: auto;
+  //     left: 0;
+  //   }
   
-    .logo-container svg {
-      position: absolute;
-      top: auto;
-      right: auto;
-      bottom: auto;
-      left: 0;
-      margin: auto;
-    }
-  }
+  //   .logo-container svg {
+  //     position: absolute;
+  //     top: auto;
+  //     right: auto;
+  //     bottom: auto;
+  //     left: 0;
+  //     margin: auto;
+  //   }
+  // }
