--- a/react-project/src/components/Layout/index.scss
+++ b/react-project/src/components/Layout/index.scss
@@ -38,7 +38,7 @@
     animation-delay: 1s;
   }
   
-  .container.contact-page,
+  .container.contact-page,//.about-page
   .container.about-page,
   .container.portfolio-page {
     
@@ -50,7 +50,7 @@
         margin-top: 0;
         position: relative;
         margin-bottom: 40px;
-        left: -10px;
+        left: -10px;//10px
   
         &:before {
           content: '<h1>';
@@ -114,50 +114,50 @@
     }
   }
   
-  @media screen and (max-width: 1200px) {
-    .page {
-      position: initial;
-    }
+  // @media screen and (max-width: 1200px) {
+  //   .page {
+  //     position: initial;
+  //   }
   
-    .container {
-      position: initial;
-      height: auto;
-      min-height: auto;
+  //   .container {
+  //     position: initial;
+  //     height: auto;
+  //     min-height: auto;
   
-      &.contact-page,
-      &.about-page,
-      &.portfolio-page {
-        .text-zone {
-          position: initial;
-          transform: none;
-          width: 100%;
-          display: block;
-          padding: 20px;
-          box-sizing: border-box;
-        }
-      }
+  //     &.contact-page,
+  //     &.about-page,
+  //     &.portfolio-page {
+  //       .text-zone {
+  //         position: initial;
+  //         transform: none;
+  //         width: 100%;
+  //         display: block;
+  //         padding: 20px;
+  //         box-sizing: border-box;
+  //       }
+  //     }
   
-      &.portfolio-page {
-        width: 100%;
-        padding: 20px;
-        box-sizing: border-box;
+  //     &.portfolio-page {
+  //       width: 100%;
+  //       padding: 20px;
+  //       box-sizing: border-box;
   
-        h1.page-title {
-          margin-left: 20px;
-          margin-top: 20px;
-        }
+  //       h1.page-title {
+  //         margin-left: 20px;
+  //         margin-top: 20px;
+  //       }
   
-        .image-box {
-          height: 200px;
-          max-width: calc(50% - 10px);
-        }
-      }
-    }
+  //       .image-box {
+  //         height: 200px;
+  //         max-width: calc(50% - 10px);
+  //       }
+  //     }
+  //   }
   
-    .stage-cube-cont {
-      position: initial;
-      width: 100%;
-      height: 0%;
-      overflow: visible;
-    }
-  }
+  //   .stage-cube-cont {
+  //     position: initial;
+  //     width: 100%;
+  //     height: 0%;
+  //     overflow: visible;
+  //   }
+  // }
