--- a/react-project/src/index.css
+++ b/react-project/src/index.css
@@ -18,8 +18,8 @@ body {
   margin-left: 200px;
 }
 
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
   body {
     overflow: visible;
   }
-}
+} */
