--- a/react-project/src/components/Home/index.scss
+++ b/react-project/src/components/Home/index.scss
@@ -39,14 +39,14 @@
         opacity: 0.6;
       }
   
-      img {
-        margin-left: 20px;
-        opacity: 0;
-        width: 32px;
-        height: auto;
-        animation: rotateIn 1s linear both;
-        animation-delay: 1.4s;
-      }
+      // img {
+      //   margin-left: 20px;
+      //   opacity: 0;
+      //   width: 32px;
+      //   height: auto;
+      //   animation: rotateIn 1s linear both;
+      //   animation-delay: 1.4s;
+      // }
     }
   
     h2 {
@@ -77,7 +77,15 @@
         background: #ffd700;
         color: #333;
       }
+      
+
     }
+    .profilePhoto{
+      height: 200px;
+      width: 200px;
+      margin: 15% 0 0 60%;
+    }
+     
   }
   
   
