--- a/react-project/src/components/Portfolio/index.scss
+++ b/react-project/src/components/Portfolio/index.scss
@@ -16,6 +16,7 @@
         gap: 15px;
         flex-wrap: wrap;
         padding-bottom: 100px;
+        
     }
 
     .image-box {
@@ -32,6 +33,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            opacity: .6;
         }
 
         .content {
@@ -51,29 +53,29 @@
         .title {
             margin-bottom: 0;
             margin-top: 0;
-            color: #fff;
-            font-size: 24px;
-            font-weight: 500;
+            color: black;
+            font-weight: 600;
+            font-size: 28px;
             line-height: 24px;
         }
 
         .description {
             font-size: 14px;
             margin-bottom: 5px;
-            color: #fff;
+            color: #636161;
             font-weight: 700;
         }
 
         .btn {
             margin-top: 30px;
-            margin-bottom: 10px;
+            margin-bottom: 40px;
             padding: 0 23px;
             height: 40px;
             line-height: 34px;
-            border: 2px solid #ffd700;
+            border: 2px solid #000;
             border-radius: 4px;
             font-size: 14px;
-            color: #fff;
+            color: #000;
             background: transparent;
             text-transform: uppercase;
             font-weight: 700;
@@ -82,17 +84,17 @@
         }
 
         .btn:hover {
-            transform: translateY(-3px);
-            background: #ffd700;
+            transform: scale(1.1);
+            background: #636161;
         }
 
         &:after {
             content: "";
-            background: linear-gradient(180deg, #ffd700, #000);
+            background: linear-gradient(180deg, #ffd700, #e4c203);
             position: absolute;
             left: 0;
             right: 0;
-            bottom: 0;
+            bottom:0;
             top: 0;
             width: 100%;
             height: 100%;
@@ -102,7 +104,7 @@
         }
 
         &:hover:after {
-            opacity: 0.85;
+            opacity: 0.9;
         }
 
         &:hover .content {
