--- a/react-project/src/components/Sidebar/index.scss
+++ b/react-project/src/components/Sidebar/index.scss
@@ -7,6 +7,15 @@
     z-index: 3;
     min-height: 500px;
   
+ img {
+        margin-left: 20px;
+        opacity: 0;
+        width: 32px;
+        height: auto;
+        animation: rotateIn 1s linear both;
+        animation-delay: 1.4s;
+      }
+
     .logo {
       display: block;
       padding: 8px 0;
@@ -14,7 +23,8 @@
       img {
         display: block;
         margin: 8px auto;
-        width: 24px;
+        // width: 24px;
+        width: 54px;
         height: auto;
   
         &.sub-logo {
